<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/medecin" />

    <TextView
        android:id="@+id/textView25"
        android:fontFamily="@font/roboto_bold"
        android:textSize="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/nom"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView26"
        android:textSize="10dp"
        android:fontFamily="@font/roboto_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/prenom"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="65dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="165dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="275dp" />

    <TextView
        android:id="@+id/textView27"
        android:textSize="10dp"
        android:fontFamily="@font/roboto_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="N° Tel"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <TextView
        android:id="@+id/textView28"
        android:textSize="10dp"
        android:fontFamily="@font/roboto_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/adresse"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView29"
        android:textSize="10dp"
        android:fontFamily="@font/roboto_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/commune"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <TextView
        android:id="@+id/textView30"
        android:textSize="10dp"
        android:fontFamily="@font/roboto_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/specialite"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView31"
        android:textSize="10dp"
        android:fontFamily="@font/roboto_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Horaires"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/roboto"
        android:text="@string/vide"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView25"
        app:layout_constraintStart_toEndOf="@+id/textView25"
        app:layout_constraintTop_toTopOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/roboto"
        android:text="@string/vide"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView26"
        app:layout_constraintStart_toEndOf="@+id/textView26"
        app:layout_constraintTop_toTopOf="@+id/textView26" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/roboto"
        android:text="@string/vide"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView27"
        app:layout_constraintStart_toEndOf="@+id/textView27"
        app:layout_constraintTop_toTopOf="@+id/textView27" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/roboto"
        android:text="@string/vide"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView28"
        app:layout_constraintStart_toEndOf="@+id/textView28"
        app:layout_constraintTop_toTopOf="@+id/textView28" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/roboto"
        android:text="@string/vide"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView29"
        app:layout_constraintStart_toEndOf="@+id/textView29"
        app:layout_constraintTop_toTopOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/roboto"
        android:text="@string/vide"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView30"
        app:layout_constraintStart_toEndOf="@+id/textView30"
        app:layout_constraintTop_toTopOf="@+id/textView30" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/roboto"
        android:text="15h - 17h"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView31"
        app:layout_constraintStart_toEndOf="@+id/textView31"
        app:layout_constraintTop_toTopOf="@+id/textView31" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/textView31"
        app:srcCompat="@drawable/gps" />

    <ImageView
        android:id="@+id/imageView36"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
        app:layout_constraintStart_toEndOf="@+id/imageView17"
        app:layout_constraintTop_toTopOf="@+id/imageView17"
        app:srcCompat="@drawable/add" />

</androidx.constraintlayout.widget.ConstraintLayout>